--- a/srecht/projects/p3/SKp31home.html
+++ b/srecht/projects/p3/SKp31home.html
@@ -33,7 +33,7 @@
             
             RISD Shared Voices 
             <br></br>
-            Design is about solving problems. Socially responsible design seeks to solve problems which improves marginalized communities. This requires an understanding of a broad range of disaplines in order to better the health of a community. Socially responsible design is the responsibility of the design community as a whole and therefore possible catylists and agents of change for the greater good. 
+           Design is about solving problems. Socially responsible design seeks to solve problems which improves marginalized communities. This requires an understanding of a broad range of disciplines in order to better the health of a community. Socially responsible design is the responsibility of the design community as a whole and therefore possible catalysts and agents of change for the greater good.
         </div>
     </div>
         
