--- a/sam/assignment3/2ndpage/index.html
+++ b/sam/assignment3/2ndpage/index.html
@@ -33,13 +33,9 @@
           <p id="haradate">01.30.15 </p>
       
           <p id="harabody">
-            Kenya Hara: the future of design<br><br>Sitting at a plain white table in a meeting room high up on the 12th floor of a narrow building in central Tokyo, product designer Kenya Hara asks me to picture a shallow plate in my mind. “Now imagine a slightly deeper plate,” Hara says, “that gets deeper and deeper and eventually becomes a bowl.”
-
-          Hara is dressed in a crumpled black suit that is thrown over the top of a simple black T-shirt. He is rarely seen in public wearing anything else. He looks at me through a pair of tiny round glasses as he continues speaking.
+            Kenya Hara: the future of design<br><br>The product designer Kenya Hara asks to picture a shallow plate in my mind. “Now imagine a slightly deeper plate,” Hara says, “that gets deeper and deeper and eventually becomes a bowl.“White”
 
           “Now see the bowl get deeper and deeper and deeper,” he says, “until it turns into a cup.”
-
-          I’m sitting opposite the country’s most important living thinker on contemporary design, but he is far away, quietly visualizing a plate turning itself into a cup.
 
           “If somebody were to ask you,” he continues, “‘At what point is it a plate? At what point a bowl, or a cup?’ You would have to question your understanding of the boundary between each object.”
 
