--- a/yuxin/index.html
+++ b/yuxin/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link type="text/css" rel="stylesheet" href="stylesheet.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="script.js"></script>
     </head>
     
     <body>
@@ -14,9 +16,10 @@
         <p id="title">Projects</p>
         <ol>
 
-        <li><a href="seven-principles.html"><p class="move">Carl Dair Mark up</P></a></li>
+        <li class="first"><a href="seven-principles.html" target="_blank"><p class="move">Carl Dair Mark up</P></a></li>
         <li><a href="webinterview/interview.html"><p class="move">Interview Project</p></a></li>
-         <li><a href="artist/open/open.html"><p class="move">Interview Project</p></a></li>
+         <li class="second"><a href="artist/open/open.html"><p class="move">Artist</p></a></li>
+         <li class="second"><a href="lecturesite/home/home.html"><p class="move">lecture</p></a></li>
 
         </ol>
         
