--- a/ji/index.html
+++ b/ji/index.html
@@ -7,12 +7,22 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="index.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="js/script.js"></script>
     </head>
     
     <body>
         <div><h1>Ji's Assignment Homepage webdesign</h1></div>
-        <p><a href="1/index.html" target="_blank">Assignment 1</a></p>
+        <p ><a href="1/index.html" target="_blank">Assignment 1</a></p>
         <p><a href="2/main.html" target="_blank">Assignment 2</a></p>
+        <p><a href="3/index.html" target="_blank">Assignment 3</a></p>
+        <p id="a">---</p>
+        <p id="b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </body>
     
 </html>
