--- a/ruth/index.html
+++ b/ruth/index.html
@@ -3,13 +3,65 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Ruth</title>
+        <title>
+            Ruth Chung: Web Design 2015
+        </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+        </script>
+        <script type="text/javascript" src="index.js">
+        </script>
+
+        <link href='http://fonts.googleapis.com/css?family=Raleway:500,600,700,400,300' rel='stylesheet' type='text/css'>
+
+        <link text="text/css" rel="stylesheet" href="index.css">
+<style>
+    body {
+        font-family: 'Raleway';
+    }
+</style>
     </head>
 <body>
-	<p><a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a></p>
-	<p><a href="project1/interview.html">Project 1: Jacob Hashimoto Interview</a></p>
-	<p><a href="project2/tiborkalman3.html">Project 2: Tibor Kalman</a></p>
+    <div class="exercises">
+        <p id="exercisestitle">
+            Exercises
+        </p>
+    	<ul>
+            <li>
+                <a href="exercise1/exercise1-copy.html">Carl Dair Markup & Styling</a>
+            </li>
+            <li>
+                FIT Website Map
+            </li>
+            <li>
+                CSS Floats
+            </li>
+            <li>
+                CSS Positioning
+            </li>
+            <li>
+                Artist Bio (Tibor Kalman)
+            </li>
+        </ul>
+
+    </div>
+    <div class="projects">
+        <p id="projectstitle">
+            Projects
+        </p>
+        <ol>
+            <li>
+                <a href="project1/interview.html">Project 1: Jacob Hashimoto Interview</a>
+            </li>
+            <li>
+                <a href="project2/tiborkalman3.html">Project 2: Tibor Kalman</a>
+            </li>
+            <li>
+                <a href="project3/sharedvoices3.html">Project 3: Shared Voices</a>
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
