--- a/ruth/project3/sharedvoices3.html
+++ b/ruth/project3/sharedvoices3.html
@@ -85,7 +85,7 @@
 		</div>
 		<p id="toyoito">Toyo Ito</p>
 		<p id="itotext">
-			Toyo Ito is a Japanese architect known for creating conceptual architecture, in which he seeks to simultaneously express the physical and virtual worlds. He is a leading exponent of architecture that addresses the contemporary notion of a "simulated" city, and has been called "one of the world's most innovative and influential architects." In 2013, Ito was awarded the Pritzker Prize, one of architecture's most prestigious prizes.[2] He was a likely front-runner for the Pritzker Prize for the previous 10 years. A recent trend has seen less experienced and well-known winners, for example Chinese architect Wang Shu in 2012, and the award to Toyo Ito is seen as recognition of a lifetime's achievement in architecture. This coming February he is visiting the MET Museum of Art to talk about contemporary architecture.
+			Toyo Ito is a Japanese architect known for creating conceptual architecture, in which he seeks to simultaneously express the physical and virtual worlds. He is a leading exponent of architecture that addresses the contemporary notion of a "simulated" city, and has been called "one of the world's most innovative and influential architects." In 2013, Ito was awarded the Pritzker Prize, one of architecture's most prestigious prizes. He was a likely front-runner for the Pritzker Prize for the previous 10 years. A recent trend has seen less experienced and well-known winners, for example Chinese architect Wang Shu in 2012, and the award to Toyo Ito is seen as recognition of a lifetime's achievement in architecture. This coming February he is visiting the MET Museum of Art to talk about contemporary architecture.
 		</p>
 	</div>
 	<div class="wave3">
