--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -26,6 +26,14 @@
 
     <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
 
+    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+
+    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+
+    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+
+    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+
 
     </body>
 
