--- a/mimi/projects/shared-voices/site/home.html
+++ b/mimi/projects/shared-voices/site/home.html
@@ -406,7 +406,7 @@ a:hover.slidesjs-stop {
                   BY DESIGN 
                   </div> <br />
                   <div class="slidetextbody">
-                    Living organisms have spent millennia evolving to become the most efficient at fulfilling their respective purposes. Now, the simplest living things provide inspiration for the most advanced materials. After ages of learning about nature, the future of design now lies in learning from it as we move toward a more sustainable future. 
+                    Living organisms have spent millennia evolving to become the most efficient at fulfilling their respective purposes. Now, the simplest living things provide inspiration for the most advanced materials. After ages of learning <i>about</i> nature, the future of design now lies in learning <i>from</i> it as we move toward a more sustainable future. 
                   </div>
               </div>
             </div>
