--- a/ruth/project3/sharedvoices3.html
+++ b/ruth/project3/sharedvoices3.html
@@ -73,7 +73,7 @@
 	</div>
 	<div class="wave4">
 		<img id="wave4" src="images/wave.svg">
-		<img id="itoimage" src="images/toyoito.jpg" width="410px" height="auto">
+		<img id="itoimage" src="images/toyoito.jpg">
 		<div class="itoiconlink">
 			<img id="itoicon" src="images/itoicon.svg" width="36px" height="auto">
 			<a href= "http://www.toyo-ito.co.jp/" target="_blank">
@@ -92,7 +92,7 @@
 		<img id="wave3" src="images/wave.svg">
 		<img id="kusamaimage" src="images/yayoikusama.jpg" width="305px" height="auto">
 		<div class="kusamaiconlink">
-			<img id="kusamaicon" src="images/kusamaicon.svg" width="130px" height="auto">
+			<img id="kusamaicon" src="images/kusamaicon.svg">
 			<a href= "http://www.yayoi-kusama.jp/" target="_blank">
 				<p id="kusamalink">
 					Yayoi Kusama website
@@ -107,7 +107,7 @@
 	</div>
 	<div class="wave2">
 		<img id="wave2" src="images/wave.svg">
-		<img id="miyazakiimage" src="images/hayaomiyazaki3.jpg" width="500px" height="auto">
+		<img id="miyazakiimage" src="images/hayaomiyazaki3.jpg">
 		<div class="miyazakiiconlink">
 			<img id="miyazakiicon" src="images/ghibli.png" width="130px" height="auto">
 			<a href="http://www.studioghibli.com.au/" target="_blank">
