--- a/tomas/index.html
+++ b/tomas/index.html
@@ -15,6 +15,7 @@
             <li><a href="week1exercises/sevenprinciples.html"/>Carl Dair Markup</a></li>
             <li><a href="project1interview/messi-interview.html"/>Project 1 Interview</a></li>
             <li><a href="project2tour/1md_landingpage.html"/>Mark Dion</a></li>
+            <li><a href="project3sharedvoices/2sv_home.html"/>Shared Voices</a></li>
         </ol>
     </body>
     
