--- a/greg/projects/project3/kaws.html
+++ b/greg/projects/project3/kaws.html
@@ -12,7 +12,7 @@
 
     <body>
         <div id="background">
-            <img id="backchange" src='../project3 (new)/img/kaws/kaws_main.jpg' class="stretch" alt=""/>
+            <img id="backchange" src='../project3/img/kaws/kaws_main.jpg' class="stretch" alt=""/>
         </div>
     	<a href="project3.html"><img src="img/main/sv_white.png" id="logo"></a>
 
