--- a/greg/projects/project3/nolan.html
+++ b/greg/projects/project3/nolan.html
@@ -12,7 +12,7 @@
 
     <body>
         <div id="background">
-            <img id="backchange" src='../project3 (new)/img/nolan/nolan_main.jpg' class="stretch" alt=""/>
+            <img id="backchange" src='../project3/img/nolan/nolan_main.jpg' class="stretch" alt=""/>
         </div>
         <a href="project3.html"><img src="img/main/sv_white.png" id="logo"></a>
         <div id="text_box">
