--- a/ruth/index.html
+++ b/ruth/index.html
@@ -30,20 +30,69 @@
         </p>
     	<ul>
             <li>
-                <a href="exercise1/exercise1-copy.html">Carl Dair Markup & Styling</a>
+                <a href="exercises/carldair-markup/carldair.html">
+                    Carl Dair Markup & Styling
+                </a>
             </li>
-            <li>
-                FIT Website Map
-            </li>
+            <a href="exercises/website-wireframe/fit-website-wireframe.pdf">
+                <li>
+                    FIT Website Map
+                </li>
+            </a>
             <li>
                 CSS Floats
+                <br>
+                <ul>
+                    <a href="exercises/css-float/chessboard.html">
+                        <li>
+                            Chessboard
+                        </li>
+                    </a>
+                    <a href="exercises/css-float/tennis-court.html">
+                        <li>
+                            Tennis Court
+                        </li>
+                    </a>
+                    <a href="exercises/css-float/column-grid.html">
+                        <li>
+                            Column Grid
+                        </li>
+                    </a>
+                    <a href="exercises/css-float/blog-layout.html">
+                        <li>
+                            Blog Layout
+                        </li>
+                    </a>
+                    <a href="california-case2.html">
+                        <li>
+                            California Case
+                        </li>
+                    </a>
+                </ul>
             </li>
             <li>
                 CSS Positioning
+                <br>
+                <ul>
+                    <a href="exercises/css-positioning/fixed-positioning.html">
+                        <li>
+                            Fixed Positioning
+                        </li>
+                    <a href="exercises/css-positioning/absolute-positioning.html">
+                        <li>
+                            Absolute Positioning
+                        </li>
+                    <a href="exercises/css-positioning/relative-positioning.html">
+                        <li>
+                            Relative Positioning
+                        </li>
+                </ul>
             </li>
-            <li>
-                Artist Bio (Tibor Kalman)
-            </li>
+            <a href="exercises/artist-bio/tiborkalman.html">
+                <li>
+                    Artist Bio (Tibor Kalman)
+                </li>
+            </a>
         </ul>
 
     </div>
