--- a/tomas/project3sharedvoices/1sv_home.html
+++ b/tomas/project3sharedvoices/1sv_home.html
@@ -13,7 +13,7 @@
   
   <body>
 
-<img id="bg" src="images/homenosky.JPG">
+<img id="bg" src="images/homenosky.jpg">
 <img id="sky" src="images/sky.png">
 
   <a href="2sv_barney.html">
