--- a/ruth/index.html
+++ b/ruth/index.html
@@ -24,6 +24,9 @@
 </style>
     </head>
 <body>
+    <div class="name">
+        Ruth Chung: Web Design 2015
+    </div>
     <div class="exercises">
         <p id="exercisestitle">
             Exercises
