--- a/ruth/index.html
+++ b/ruth/index.html
@@ -66,7 +66,7 @@
                             Blog Layout
                         </li>
                     </a>
-                    <a href="california-case2.html">
+                    <a href="exercises/css-float/california-case2.html">
                         <li>
                             California Case
                         </li>
