--- a/tomas/project3sharedvoices/1sv_home.html
+++ b/tomas/project3sharedvoices/1sv_home.html
@@ -20,7 +20,7 @@
     <div id="one">
       <img class="bottom" src="images/jar1.jpg" />
       <img class="middle" src="images/jar2.JPG" />
-      <img class="top" src="images/jar3.jpg" />
+      <img class="top" src="images/jar3.JPG" />
     </div>
   </a>
   
@@ -35,8 +35,8 @@
   <a href="4sv_elgin.html">  
     <div id="three">
       <img class="bottom" src="images/chair1.jpg" />
-      <img class="middle" src="images/chair2.jpg" />
-      <img class="top" src="images/chair3.jpg" />
+      <img class="middle" src="images/chair2.JPG" />
+      <img class="top" src="images/chair3.JPG" />
     </div>
   </a>
 
