--- a/sam/exercise5/3column.html
+++ b/sam/exercise5/3column.html
@@ -6,20 +6,23 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <link type="text/css" rel="stylesheet" href="tenniscourt.css"/>
+          <link type="text/css" rel="stylesheet" href="3column.css"/>
+   
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="script.js"></script>
+
     </head>
     
     <body>
 
         <div>
-
             <div1></div1>
             <div2></div2>
             <div3></div3>
             <div3></div3>
-
-        </div> 
+            <div3></div3>
+            <div1></div1>
+        </div>
 
     </body>
     
