--- a/sam/index.html
+++ b/sam/index.html
@@ -11,9 +11,9 @@
 
     </head>
         <style>
-          .blue {color: blue;font-size: 20px; font-family: futura}
+          .blue {color: blue;font-size: 20px; font-family: futura;}
           
-          .left {float:left;}
+          .left {float:bottom;}
         </style>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -23,10 +23,13 @@
 
   
       <li class="blue" id="first"><a href="exercise1/">Exercise 1</a></li>
-      <li class="blue"><a href="exercise2/">Exercise 2</a></li>
-      <li class="blue"><a href="exercise3/">Exercise 3</a></li>
-      <li class="blue"><a href="exercise4/">Exercise 4</a></li>
-      <li class="blue"><a href="">Exercise 5</a></li>
+      <li class="blue"><a href="exercise2/exercise2.html">Exercise 2</a></li>
+      <li class="blue"><a href="exercise3/exercise3.html">Exercise 3</a></li>
+      <li class="blue"><a href="exercise4/">Exercise 4:pdf wireframing included</a></li>
+      <li class="blue"><a href="exercise5">Exercise 5</a></li>
+      <li class="blue"><a href="exercise6">Exercise 6</a></li>
+      <li class="blue"><a href="exercise7/index.html">Exercise 7</a></li>
+
       <li class="blue"><a href="assignment1/index.html">Assignment 1</a></li>
       <li class="blue"><a href="assignment2/assignment2/index.html">Assignment 2</a></li>  <li class="blue"><a href="assignment3/index2.html">Assignment 3</a></li>
 
