--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -20,12 +20,12 @@
 
         <h3>Exercises</h3>
         <ol>
-            <li><a href="exercises/ex-1-filenav">Path Navigation</a></li>
+            <li><a href="exercises/ex-1-filenav/index.html">Path Navigation</a></li>
             <li><a href="exercises/ex-2-dairmarkup/html.html">Markup Carl Dair’s Seven Principles of Typographic Contrast</a></li>
             <li><a href="exercises/ex-3-dairstyle/html.html">Style Carl Dair’s Seven Principles of Typographic Contrast</a></li>
             <li><a href="exercises/ex-4-artschool/artcenter.pdf">Reverse Engineer a Sitemap</a></li>
-            <li><a href="exercises/ex-5-floats">CSS Floats</a></li>
-            <li><a href="exercises/ex-6-positioning">CSS Positioning</a></li>
+            <li><a href="exercises/ex-5-floats/index.html">CSS Floats</a></li>
+            <li><a href="exercises/ex-6-positioning/index.html">CSS Positioning</a></li>
             <li><a href="exercises/ex-7-artistbio/artistbio.html">Artist Bio</a></li>
         </ol><br>
 
