updated index folder
updated index folder added links

--- a/srecht/index.html
+++ b/srecht/index.html
@@ -42,7 +42,7 @@
     <br></br> 
 <a href="exerisesall/ex5/tennisecourt/tenniscourt.html"> Exercise 5 </a>
 <br></br> 
-<a href="exerisesall/ex6/"> Exercise 6 </a>
+<a href="exerisesall/ex6/1/positioning1.html"> Exercise 6 </a>
 <br></br> 
 <a href="exerisesall/ex7/exerciseartistbio.html"> Exercise 7 </a>
         </ul>
