--- a/ji/index.html
+++ b/ji/index.html
@@ -13,6 +13,12 @@
     
     <body>
         <div><h1>Ji's Assignment Homepage webdesign</h1></div>
+        <p>Exercises</p>
+        <p><a href="exercise/1_filepathnav/file_org_1">file_org_1</a></p>
+        <p><a href="exercise/1_filepathnav/file_org_2/blackgoose-final-Final2">file_org_2</a></p>
+        <p><a href="exercise/1_filepathnav/file_nav/relative.txt">file_nav</a></p>
+
+        <p>Projects</p>
         <p><a href="project/1/index.html" target="_blank">Assignment 1</a><br>
         &nbsp;&nbsp;&nbsp;<a href="project/1/plan.pdf">Plan</a></p>
         <p><a href="project/2/main.html" target="_blank">Assignment 2</a><br>
