--- a/ji/index.html
+++ b/ji/index.html
@@ -14,9 +14,30 @@
     <body>
         <div><h1>Ji's Assignment Homepage webdesign</h1></div>
         <p>Exercises</p>
+        <br>
+        <p>1. File Path Navigation</p>
         <p><a href="exercise/1_filepathnav/file_org_1">file_org_1</a></p>
         <p><a href="exercise/1_filepathnav/file_org_2/blackgoose-final-Final2">file_org_2</a></p>
         <p><a href="exercise/1_filepathnav/file_nav/relative.txt">file_nav</a></p>
+
+        <p><a href="exercise/2_markup/html.html">2. Mark-up</a></p>
+        <p><a href="exercise/3_stylemarkup/html.html">3. Style Mark-up</a></p>
+        <p>4.Reverse Engineer</p>
+        <p><a href="exercise/4_reverseengineer/art_center.pdf">Sitemap</a></p>
+        <p><a href="exercise/4_reverseengineer/document.txt">Description</a></p>
+        <p>5. Float</p>
+        <p><a href="exercise/5_float/1chess/chess.html"></a>Chessboard</p>
+        <p><a href="exercise/5_float/2tennis/tennis.html">Tennis Court</a></p>
+        <p><a href="exercise/5_float/3column/column.html">3 Column</a></p>
+        <p><a href="exercise/5_float/4blog/blog.html">Blog</a></p>
+        <p><a href="exercise/5_float/5california/california.html">California Case</a></p>
+        <p>6. Positioning</p>
+        <p><a href="exercise/6_position/1absolute/absolute.html">Absolute</a></p>
+        <p><a href="exercise/6_position/2fixed/fixed.html">Fixed</a></p>
+        <p><a href="exercise/6_position/3relative/relative.html">Relative</a></p>
+        <p><a href="exercise/7_artistbio/muriel.html">Artist Bio: Muriel Cooper</a></p>
+        <br>
+        <br>
 
         <p>Projects</p>
         <p><a href="project/1/index.html" target="_blank">Assignment 1</a><br>
@@ -26,13 +47,6 @@
         <p><a href="project/3/index.html" target="_blank">Assignment 3</a><br>
         &nbsp;&nbsp;&nbsp;<a href="project/3/3.pdf">Plan ver.Computer<br></a>
         &nbsp;&nbsp;&nbsp;<a href="project/3/3_phone.pdf">Plan ver.Phone</a></p>
-        <p id="a">---</p>
-        <p id="b">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </body>
     
 </html>
