--- a/ji/index.html
+++ b/ji/index.html
@@ -26,7 +26,7 @@
         <p><a href="exercise/4_reverseengineer/art_center.pdf">Sitemap</a></p>
         <p><a href="exercise/4_reverseengineer/document.txt">Description</a></p>
         <p>5. Float</p>
-        <p><a href="exercise/5_float/1chess/chess.html"></a>Chessboard</p>
+        <p><a href="exercise/5_float/1chess/chess.html">Chessboard</a></p>
         <p><a href="exercise/5_float/2tennis/tennis.html">Tennis Court</a></p>
         <p><a href="exercise/5_float/3column/column.html">3 Column</a></p>
         <p><a href="exercise/5_float/4blog/blog.html">Blog</a></p>
