--- a/ji/project/3/index.html
+++ b/ji/project/3/index.html
@@ -57,6 +57,9 @@
                 </div>
                 <br>
                 <br>
+                <br>
+                <p align="right"; style="font-size:15px;"><a href="reference.html">Reference for all content used</a></p>
+                <br>
             </div>
         </div>
     </body>
