--- a/ruth/index.html
+++ b/ruth/index.html
@@ -24,6 +24,8 @@
 </style>
     </head>
 <body>
+    <div class="bar">
+    </div>
     <div class="name">
         Ruth Chung: Web Design 2015
     </div>
@@ -33,11 +35,45 @@
         </p>
     	<ul>
             <li>
-                <a href="exercises/carldair-markup/carldair.html">
-                    Carl Dair Markup & Styling
-                </a>
+                File Organization
+                <br>
+                <ul>
+                    <a href="exercises/file-organizing/01_file-org/index.html">
+                        <li>
+                            practice 1
+                        </li>
+                    </a>
+                    <a href="exercises/file-organizing/file-org_2/index.html">
+                        <li>
+                            practice 2
+                        </li>
+                    </a>
+                    <a href="exercises/file-organizing/file_nav/relative.html">
+                        <li>
+                            file navigation questions; answers
+                        </li>
+                    </a>
+                </ul>
             </li>
-            <a href="exercises/website-wireframe/fit-website-wireframe.pdf">
+            
+                <li>
+                    Carl Dair Markup & Styling
+                    <br>
+                    <ul>
+                        <a href="exercises/carldair-markup/carldair-nocss.html">
+                            <li>
+                                Marked up html without css styling
+                            </li>
+                        </a>
+                        <a href="exercises/carldair-markup/carldair.html">
+                            <li>
+                                Html with css styling
+                            </li>
+                        </a>
+                    </ul>
+                </li>
+            </a>
+            <a href="exercises/website-wireframe/fit-website-wireframe.svg">
                 <li>
                     FIT Website Map
                 </li>
@@ -105,13 +141,35 @@
         </p>
         <ol>
             <li>
-                <a href="project1/interview.html">Project 1: Jacob Hashimoto Interview</a>
+                <a href="project1/interview.html">
+                    Project 1: Jacob Hashimoto Interview
+                </a>
+                <br>
+                <a href="project1/images/interview-wireframe.svg">
+                    (See wireframe)
+                </a>
             </li>
             <li>
-                <a href="project2/tiborkalman3.html">Project 2: Tibor Kalman</a>
+                <a href="project2/tiborkalman3.html">
+                    Project 2: Tibor Kalman
+                </a>
+                <br>
+                <a href="wireframes/tiborkalman-wireframe.svg">
+                    (See wireframe)
+                </a>
             </li>
             <li>
-                <a href="project3/sharedvoices3.html">Project 3: Shared Voices</a>
+                <a href="project3/sharedvoices3.html">
+                    Project 3: Shared Voices
+                </a>
+                <br>
+                <a href="project3/concept.html">
+                    (See concept description)
+                </a>
+                <br>
+                <a href="wireframes/sharedvoices-wireframe.svg">
+                    (See wireframe)
+                </a>
             </li>
         </ol>
     </div>
