--- a/ruth/project2/tiborkalman-link1-2.html
+++ b/ruth/project2/tiborkalman-link1-2.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="text">
 		<p>
-			"Are they toys<a href="tiborkalman-link.html">?</a> Are they symbols<a href="tiborkalman-link3-2.html">?</a> Are they the <a href="tiborkalman-link2-2.html">things</a> that teach girls and boys what their roles as adults should be?"
+			"Are they toys<a href="tiborkalman-link3-3.html">?</a> Are they symbols<a href="tiborkalman-link3-2.html">?</a> Are they the <a href="tiborkalman-link2-2.html">things</a> that teach girls and boys what their roles as adults should be?"
 		</p>
 	</div>
 	<a href="tiborkalman3.html">
