--- a/ruth/project2/tiborkalman-link1.html
+++ b/ruth/project2/tiborkalman-link1.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="text">
 		<p>
-			"Let's talk about fashion. <br><a href="tiborkalman-link3">Let's talk</a> about sex. <br>Let's talk about <a href="tiborkalman-link2-2.html">death</a>. <br>Let's <a href="tiborkalman-link3-2.html">really</a> talk about AIDS."
+			"Let's talk about fashion. <br><a href="tiborkalman-link3.html">Let's talk</a> about sex. <br>Let's talk about <a href="tiborkalman-link2-2.html">death</a>. <br>Let's <a href="tiborkalman-link3-2.html">really</a> talk about AIDS."
 		</p>
 		<div class="paragraph-break">
 		</div>
