--- a/ruth/project2/tiborkalman-link3-2.html
+++ b/ruth/project2/tiborkalman-link3-2.html
@@ -11,7 +11,7 @@
 		<span id="title-part">Magazine - on Race</span>
 	</div>
 	<div class="text">
-		"In the piece called 'What if...? the celebrities were <a href="tiborkalman-link3-3.html">chosen</a> because they would be recognized by their <a href="tiborkalman-link3">faces</a> only - <a href="tiborkalman-link3.html">globally</a>. The idea was that if you could separate the person from their <a href="tiborkalman-link3.html">race</a> you could then figure out how you <a href="tiborkalman-link2-2.html">feel</a> about the race <a href="tiborkalman-link1-2.html">versus</a> the person. So when you look at the black Queen, you think 'does she dance better? Is Buckingham Palace <a href="tiborkalman-link1-2.html">playing</a> cool Caribbean <a href="tiborkalman-link1.html">music</a> at receptions?' And as you explore these questions you become conscious of your own racism."
+		"In the piece called 'What if...? the celebrities were <a href="tiborkalman-link3-3.html">chosen</a> because they would be recognized by their <a href="tiborkalman-link3.html">faces</a> only - <a href="tiborkalman-link3.html">globally</a>. The idea was that if you could separate the person from their <a href="tiborkalman-link3.html">race</a> you could then figure out how you <a href="tiborkalman-link2-2.html">feel</a> about the race <a href="tiborkalman-link1-2.html">versus</a> the person. So when you look at the black Queen, you think 'does she dance better? Is Buckingham Palace <a href="tiborkalman-link1-2.html">playing</a> cool Caribbean <a href="tiborkalman-link1.html">music</a> at receptions?' And as you explore these questions you become conscious of your own racism."
 	</div>
 	<a href="tiborkalman3.html">
 		<div id="tiborkalman">
