--- a/ji/index.html
+++ b/ji/index.html
@@ -14,40 +14,40 @@
     
     <body>
         <div><h1>Ji's Assignment Homepage webdesign</h1></div>
-        <p>Exercises</p>
-        <br>
-        <p>1. File Path Navigation</p>
-        <p><a href="exercise/1_filepathnav/file_org_1">file_org_1</a></p>
-        <p><a href="exercise/1_filepathnav/file_org_2/blackgoose-final-Final2">file_org_2</a></p>
-        <p><a href="exercise/1_filepathnav/file_nav/relative.txt">file_nav</a></p>
+        <h2>Exercises</h2>
+        <p><strong>1. File Path Navigation</strong></p>
+        <p><a href="exercise/1_filepathnav/file_org_1">file-org-1</a></p>
+        <p><a href="exercise/1_filepathnav/file_org_2/blackgoose-final-Final2">file-org-2</a></p>
+        <p><a href="exercise/1_filepathnav/file_nav/relative.txt">file-nav</a></p>
 
-        <p><a href="exercise/2_markup/html.html">2. Mark-up</a></p>
-        <p><a href="exercise/3_stylemarkup/html.html">3. Style Mark-up</a></p>
-        <p>4.Reverse Engineer</p>
+        <p><a href="exercise/2_markup/html.html"><strong>2. Carl Dair's Markup</strong></a></p>
+        <p><a href="exercise/3_stylemarkup/html.html"><strong>3. Style Carl Dair</strong></a></p>
+        <p><strong>4.Reverse Engineer</strong></p>
         <p><a href="exercise/4_reverseengineer/art_center.pdf">Sitemap</a></p>
         <p><a href="exercise/4_reverseengineer/document.txt">Description</a></p>
-        <p>5. Float</p>
+        <p><strong>5. Floats</strong></p>
         <p><a href="exercise/5_float/1chess/chess.html">Chessboard</a></p>
         <p><a href="exercise/5_float/2tennis/tennis.html">Tennis Court</a></p>
-        <p><a href="exercise/5_float/3column/column.html">3 Column</a></p>
-        <p><a href="exercise/5_float/4blog/blog.html">Blog</a></p>
+        <p><a href="exercise/5_float/3column/column.html">3 Column Grid</a></p>
+        <p><a href="exercise/5_float/4blog/blog.html">Blog Layout</a></p>
         <p><a href="exercise/5_float/5california/california.html">California Case</a></p>
-        <p>6. Positioning</p>
+        <p><strong>6. Positioning</strong></p>
         <p><a href="exercise/6_position/1absolute/absolute.html">Absolute</a></p>
         <p><a href="exercise/6_position/2fixed/fixed.html">Fixed</a></p>
         <p><a href="exercise/6_position/3relative/relative.html">Relative</a></p>
-        <p><a href="exercise/7_artistbio/muriel.html">Artist Bio: Muriel Cooper</a></p>
+        <p><a href="exercise/7_artistbio/muriel.html"><strong>7. Artist Bio: Muriel Cooper</strong></a></p>
+        <br>
+        <h2>Projects</h2>
+        <p><a href="project/1/index.html" target="_blank"><strong>Project 1: Sytle an Interview</strong></a></p>
+        <p><a href="project/1/plan.pdf">Plan</a></p>
+        <p><a href="project/2/main.html" target="_blank"><strong>Project 2: Hyperlinked Artist Tour</strong></a></p>
+        <p><a href="project/2/2.pdf">Plan</a></p>
+        <p><a href="project/3/index.html" target="_blank"><strong>Project 3: Responsive Shared Voices Website</strong></a></p>
+        <p><a href="project/3/3.pdf">Plan ver.Computer<br></a></p>
+        <p><a href="project/3/3_phone.pdf">Plan ver.Phone</a></p>
         <br>
         <br>
-
-        <p>Projects</p>
-        <p><a href="project/1/index.html" target="_blank">Assignment 1</a><br>
-        &nbsp;&nbsp;&nbsp;<a href="project/1/plan.pdf">Plan</a></p>
-        <p><a href="project/2/main.html" target="_blank">Assignment 2</a><br>
-        &nbsp;&nbsp;&nbsp;<a href="project/2/2.pdf">Plan</a></p>
-        <p><a href="project/3/index.html" target="_blank">Assignment 3</a><br>
-        &nbsp;&nbsp;&nbsp;<a href="project/3/3.pdf">Plan ver.Computer<br></a>
-        &nbsp;&nbsp;&nbsp;<a href="project/3/3_phone.pdf">Plan ver.Phone</a></p>
+        <br>
     </body>
     
 </html>
