--- a/ruth/index.html
+++ b/ruth/index.html
@@ -148,14 +148,22 @@
                 <a href="project1/images/interview-wireframe.svg">
                     (See wireframe)
                 </a>
+                <br>
+                <a href="project1/images/interview-sitemap.svg">
+                    (See sitemap)
+                </a>
             </li>
             <li>
                 <a href="project2/tiborkalman3.html">
                     Project 2: Tibor Kalman
                 </a>
                 <br>
-                <a href="wireframes/tiborkalman-wireframe.svg">
+                <a href="project2/images/tiborkalman-wireframe.jpg">
                     (See wireframe)
+                </a>
+                <br>
+                <a href="project2/images/tiborkalman-sitemap.svg">
+                    (See sitemap)
                 </a>
             </li>
             <li>
@@ -167,8 +175,12 @@
                     (See concept description)
                 </a>
                 <br>
-                <a href="wireframes/sharedvoices-wireframe.svg">
+                <a href="project3/sharedvoices-wireframe.html">
                     (See wireframe)
+                </a>
+                <br>
+                <a href="project3/images/sharedvoices-sitemap.svg">
+                    (See sitemap)
                 </a>
             </li>
         </ol>
