--- a/yuxin/index.html
+++ b/yuxin/index.html
@@ -16,10 +16,26 @@
         <p id="title">Projects</p>
         <ol>
 
-        <li class="first"><a href="seven-principles.html" target="_blank"><p class="move">Carl Dair Mark up</P></a></li>
-        <li><a href="webinterview/interview.html"><p class="move">Interview Project</p></a></li>
-         <li class="second"><a href="artist/open/open.html"><p class="move">Artist</p></a></li>
-         <li class="second"><a href="lecturesite/home/home.html"><p class="move">lecture</p></a></li>
+        <li><a href="webinterview/interview.html" target="_blank"><p class="move">Interview Project</p></a></li>
+         <li class="second"><a href="artist/open/open.html" target="_blank"><p class="move">Artist</p></a></li>
+         <li class="second"><a href="lecturesite/home/home.html" target="_blank"><p class="move">lecture</p></a></li>
+
+        </ol>
+
+        <p id="title">Exercise</p>
+
+        <ol>
+            <li class="first"><a href="seven-principles.html" target="_blank"><p class="move">exe-2 Carl Dair Mark up</P></a></li>
+
+            <li class="first"><a href="exe/ex-3seven/seven-principles2.html" target="_blank"><p class="move">exe-3 Carl Dair Mark up</P></a></li>
+
+            <li class="first"><a href="exe/ex-4sitemap/sitemap.html" target="_blank"><p class="move">exe-4 Sitemap</P></a></li>
+
+            <li class="first"><a href="exe/ex-5chessboard/chessboard.html" target="_blank"><p class="move">exe-5 Floating</P></a></li>
+
+            <li class="first"><a href="exe/ex-7artist-id/artistid.html" target="_blank"><p class="move">exe-7 Artist Bio</P></a></li>
+
+
 
         </ol>
         
