--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -16,23 +16,19 @@
 
     <body>
 
-    <link rel="stylesheet" href="project_1_interview/css/index.css">
+    <link rel="stylesheet" href="projects/project-1-interview/site/css/index.css">
 
-    <li><a href="projects/project-1-interview/site/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Interview!</p></a></li>
+    <li><a href="projects/project-1-interview/site/main.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Interview!</p></a></li>
 
-    <li><a href="projects/project-2-artisttour/site/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Artist Tour!</p></a></li>
+    <li><a href="projects/project-2-artisttour/site/main.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Artist Tour!</p></a></li>
 
-    <li><a href="projects/project-3-sharedvoices/site/home.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Shared Voices!</p></a></li>
+    <li><a href="projects/project-3-sharedvoices/site/home.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Shared Voices!</p></a></li>
 
-    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the dair markup!</p></a></li>
 
-    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+    <li><a href="exercises/ex-3-dairstyle/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the dair style!</p></a></li>
 
-    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
-
-    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
-
-    <li><a href="exercises/ex-2-dairmarkup/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the exercises!</p></a></li>
+    <li><a href="exercises/ex-7-artistbio/main.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the artistbio!</p></a></li>
 
 
     </body>
